== Version 1.1.3 (trunk)

* Fixed bug where the wrong named error was not always caught by "should raise_error"
* Applied patch from Luis Lavena: No coloured output on Windows due missing RUBYOPT. Closes #244.
* Applied patch from Craig Demyanovich to add support for "should_not render_template" to rspec_on_rails. Closes #241.
* Added --pattern (-p for short) option to control what files get loaded. Defaults to '**/*_spec.rb'
* Exit with non-0 exit code if examples *or tests* (in test/unit interop mode) fail. Closes #203.
* Moved at_exit hook to a method in Spec::Runner which only runs if specs get loaded. Closes #242.
* Applied patch from kakutani ensuring that base_view_path gets cleared after each view example. Closes #235.
* More tweaks to regexp step names

== Version 1.1.2

Minor bug fixes/enhancements.

* RSpec's Autotest subclasses compatible with ZenTest-3.8.0 (thanks to Ryan Davis for making it easier on Autotest subs).
* Applied patch from idl to add spec/lib to rake stats. Closes #226.
* calling setup_fixtures and teardown_fixtures for Rails >= r8570. Closes #219.
* Applied patch from Josh Knowles using ActiveSupport's Inflector (when available) to make 'should have' read a bit better. Closes #197.
* Fixed regression in 1.1 that caused failing examples to fail to generate their own names. Closes #209.
* Applied doc patch from Jens Krämer for capturing content_for
* Applied patch from Alexander Lang to clean up story steps after each story. Closes #198.
* Applied patch from Josh Knowles to support 'string_or_response.should have_text(...)'. Closes #193.
* Applied patch from Ian Dees to quiet the Story Runner backtrace. Closes #183.
* Complete support for defining steps with regexp 'names'.

== Version 1.1.1

Bug fix release.

* Fix regression in 1.1.0 that caused transactions to not get rolled back between examples.
* Applied patch from Bob Cotton to reintroduce ExampleGroup.description_options. Closes LH[#186]

== Version 1.1.0
