@@ -70,6 +70,7 @@ module Spec
           # story_server/prototype/rspec_stories.html (generated by rake stories)
           args = step.parse_args(name) if args.empty?
           begin
+            listeners.each { |l| l.step_upcoming(type, step_name, *args) }
             step.perform(world, *args) unless ::Spec::Story::Runner.dry_run
             listeners.each { |l| l.step_succeeded(type, step_name, *args) }
           rescue Exception => e
